fix: Matched rule not see in highlight row dark mode

--- a/src/renderer/src/pages/network/network.less
+++ b/src/renderer/src/pages/network/network.less
@@ -34,12 +34,6 @@
 }
 
 .network-table {
-  // flex: 1;
-
-  // th.ant-table-cell {
-  //   padding-left: 8px !important;
-  // }
-
   .react-resizable {
     position: relative;
     background-clip: padding-box;
@@ -54,5 +48,10 @@
     height: 100%;
     cursor: col-resize;
     background-image: none;
+  }
+  .ant-table-row-selected {
+    a {
+      color: var(--color-text-1);
+    }
   }
 }
